v3.7 feat: add highlight slow queries;